# distributeddatamgr_udmf

./: 1.diff  AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  a.diff  bundle.json  udmf.gni
adapter/: BUILD.gn  arkui_x_udmf.gni
adapter/framework/common/: udmf_utils.h
adapter/framework/innerkitsimpl/client/: concurrent_map.h  preset_type_descriptors.cpp  udmf_client.cpp  udmf_client.h  utd_client.cpp  utd_client.h
adapter/framework/innerkitsimpl/common/: unified_meta.cpp
framework/common/unittest/: BUILD.gn  endian_converter_test.cpp  tlv_util_test.cpp  udmf_copy_file_test.cpp  udmf_files_test.cpp  udmf_types_util_abnormal_test.cpp  udmf_types_util_test.cpp  utd_cfgs_checker_test.cpp
framework/common/unittest/mock/: file_copy_manager_mock.cpp  message_parcel_mock.h  tlv_util_mock.cpp
framework/innerkitsimpl/test/unittest/: BUILD.gn  application_defined_record_test.cpp  audio_test.cpp  audit_helper_test.cpp  custom_utd_json_parser_test.cpp  file_test.cpp  (+50 more)
framework/ndkimpl/unittest/: BUILD.gn  data_provider_impl_test.cpp  udmf_test.cpp  uds_test.cpp  utd_client_test.cpp  utd_test.cpp
interfaces/ani/: BUILD.gn
interfaces/ani/ets/: @ohos.data.unifiedDataChannel.ets  @ohos.data.uniformTypeDescriptor.ets
interfaces/cj/: BUILD.gn
interfaces/cj/include/: type_descriptor_ffi.h  type_descriptor_impl.h  udmf_log.h  unified_data_ffi.h  unified_data_impl.h  unified_data_parameter_parse.h  unified_record_ffi.h  unified_record_impl.h  uniform_type_descriptor_ffi.h  uniform_type_descriptor_impl.h  utils.h
interfaces/cj/src/: type_descriptor_ffi.cpp  type_descriptor_impl.cpp  unified_data_channel_ffi.cpp  unified_data_ffi.cpp  unified_data_impl.cpp  unified_data_parameter_parse.cpp  unified_record_ffi.cpp  unified_record_impl.cpp  uniform_type_descriptor_ffi.cpp  uniform_type_descriptor_impl.cpp  utils.cpp
interfaces/components/: BUILD.gn  UdmfComponents.js  udmfcomponents.cpp
interfaces/components/source/: UdmfComponents.ets
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/aipcore/: BUILD.gn  i_aip_core_manager.h
interfaces/innerkits/client/: entry_getter.h  getter_system.h  udmf_async_client.h  udmf_client.h  utd_client.h
interfaces/innerkits/common/: async_task_params.h  error_code.h  progress_queue.h  unified_key.h  unified_meta.h  unified_types.h  uri_permission_util.h  visibility.h
interfaces/innerkits/convert/: data_params_conversion.h  ndk_data_conversion.h  udmf_conversion.h
interfaces/innerkits/data/: application_defined_record.h  audio.h  file.h  flexible_type.h  folder.h  html.h  image.h  link.h  plain_text.h  system_defined_appitem.h  system_defined_form.h  system_defined_pixelmap.h  system_defined_record.h  text.h  type_descriptor.h  udmf_img_extractor.h  unified_data.h  unified_data_helper.h  unified_data_properties.h  unified_html_record_process.h  unified_record.h  video.h
interfaces/innerkits/dynamic/: pixelmap_loader.h  pixelmap_wrapper.h  udmf_img_extractor.h  xml_loader.h  xml_wrapper.h
interfaces/jskits/: BUILD.gn
interfaces/jskits/common/: napi_data_utils.h  napi_error_utils.h  napi_queue.h
interfaces/jskits/data/: application_defined_record_napi.h  audio_napi.h  data_load_params_napi.h  file_napi.h  folder_napi.h  get_data_params_napi.h  histogram_enum.h  histogram_wrapper.h  html_napi.h  image_napi.h  link_napi.h  plain_text_napi.h  summary_napi.h  system_defined_appitem_napi.h  system_defined_form_napi.h  system_defined_pixelmap_napi.h  system_defined_record_napi.h  text_napi.h  type_descriptor_napi.h  udmf_napi.h  unified_data_channel_napi.h  unified_data_napi.h  unified_data_properties_napi.h  unified_record_napi.h  uniform_type_descriptor_napi.h  video_napi.h
interfaces/jskits/intelligence/: aip_log.h  aip_napi_error.h  aip_napi_utils.h  histogram_wrapper.h  hitrace.h  i_aip_core_manager.h  i_aip_core_manager_impl.h  image_embedding_napi.h  js_ability.h  napi_trace.h  native_module_intelligence.h  native_module_rag.h  rag_agent_chatllm_napi.h  rag_chatllm_impl.h  rag_session_napi.h  retrieval_napi.h  text_embedding_napi.h
interfaces/jskits/module/: udmf_napi_module.cpp  unified_data_channel_napi_module.cpp  uniform_type_descriptor_napi_module.cpp
interfaces/ndk/: BUILD.gn
interfaces/ndk/data/: data_provider_impl.h  udmf.h  udmf_err_code.h  udmf_meta.h  uds.h  utd.h
interfaces/taihe/: BUILD.gn
interfaces/taihe/ets/: @ohos.data.UdmfComponents.ets  BUILD.gn
interfaces/taihe/idl/: ohos.data.intelligence.taihe  ohos.data.unifiedDataChannel.taihe  ohos.data.uniformDataStruct.taihe  ohos.data.uniformTypeDescriptor.taihe
interfaces/taihe/include/: ani_common_utils.h  application_defined_record_taihe.h  audio_taihe.h  data_intelligence_impl.h  data_load_params_taihe.h  defined_appitem_taihe.h  defined_form_taihe.h  defined_pixelmap_taihe.h  defined_record_taihe.h  file_taihe.h  folder_taihe.h  get_data_params_taihe.h  html_taihe.h  hyperlink_taihe.h  image_taihe.h  plain_text_taihe.h  summary_taihe.h  taihe_common_utils.h  text_taihe.h  type_descriptor_taihe.h  udmf_ani_converter_utils.h  unified_data_properties_taihe.h  unified_data_taihe.h  unified_record_taihe.h  video_taihe.h
interfaces/taihe/src/: ani_common_utils.cpp  ani_constructor.cpp  application_defined_record_taihe.cpp  audio_taihe.cpp  data_load_params_taihe.cpp  defined_appitem_taihe.cpp  defined_form_taihe.cpp  defined_pixelmap_taihe.cpp  defined_record_taihe.cpp  file_taihe.cpp  folder_taihe.cpp  get_data_params_taihe.cpp  html_taihe.cpp  hyperlink_taihe.cpp  image_taihe.cpp  ohos.data.intelligence.impl.cpp  ohos.data.unifiedDataChannel.impl.cpp  ohos.data.uniformTypeDescriptor.impl.cpp  plain_text_taihe.cpp  summary_taihe.cpp  taihe_common_utils.cpp  text_taihe.cpp  type_descriptor_taihe.cpp  udmf_ani_converter_utils.cpp  unified_data_properties_taihe.cpp  unified_data_taihe.cpp  unified_record_taihe.cpp  video_taihe.cpp
service/: BUILD.gn
service/include/: udmf_service_impl.h  udmf_service_stub.h
service/src/: udmf_service_impl.cpp  udmf_service_stub.cpp
service/test/fuzztest/: BUILD.gn
(+282 files in other folders)
