# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("udmf_packages") {
  if (is_standard_system) {
    deps = [
      "interfaces/components:udmfcomponents",
      "interfaces/innerkits:udmf_client",
      "interfaces/innerkits:utd_client",
      "interfaces/innerkits/aipcore:aip_core_mgr_static",
      "interfaces/jskits:intelligence_napi",
      "interfaces/jskits:rag_napi",
      "interfaces/jskits:udmf_data_napi",
      "interfaces/jskits:unifieddatachannel_napi",
      "interfaces/jskits:uniformtypedescriptor_napi",
      "interfaces/ndk:libudmf",
    ]
  }
}

group("unittest") {
  testonly = true

  deps = [
    "framework/common/unittest:unittest",
    "framework/innerkitsimpl/test/unittest:unittest",
    "framework/jskitsimpl/unittest:unittest",
    "framework/ndkimpl/unittest:unittest",
  ]
}

group("fuzztest") {
  testonly = true

  deps = [ "framework/innerkitsimpl/test/fuzztest:fuzztest" ]
}
