# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

third_party_path = "//third_party"

aafwk_path = "//foundation/ability/ability_runtime"

aafwk_inner_api_path = "${aafwk_path}/interfaces/inner_api"

aafwk_kits_path = "${aafwk_path}/frameworks/kits"

aafwk_napi_path = "${aafwk_path}/frameworks/js/napi"

aafwk_service_path = "${aafwk_path}/services"

access_kit_path = "//base/security/access_token"

arkui_path = "//foundation/arkui"

ddms_path = "//foundation/distributeddatamgr/datamgr_service"

file_service_path = "//foundation/filemanagement/app_file_service"

udmf_root_path = "//foundation/distributeddatamgr/udmf"

udmf_framework_path = "${udmf_root_path}/framework"

udmf_interfaces_path = "${udmf_root_path}/interfaces"

udmf_service_path = "${udmf_root_path}/service"

kv_store_path = "//foundation/distributeddatamgr/kv_store"

developer_test_path = "//test/testfwk/developer_test"
