# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_cross_platform_path =
    "//foundation/appframework/ability/ability_runtime/cross_platform"

arkui_x_c_utils_path = "//commonlibrary/c_utils"

arkui_x_hilog_path = "//base/hiviewdfx/hilog"

arkui_x_plugin_path = "//plugins"

arkui_x_multimedia_path = "//foundation/multimedia"

arkui_x_image_framework_path = "${arkui_x_multimedia_path}/image_framework"

arkui_x_graphic_root_path = "//foundation/graphic"

arkui_x_graphic_2d_path = "${arkui_x_graphic_root_path}/graphic_2d"

arkui_x_graphic_surface_path = "${arkui_x_graphic_root_path}/graphic_surface"
