# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

config("ani_config") {
  include_dirs = [
    "native/include",
    "${udmf_interfaces_path}/cj/include",
    "${udmf_interfaces_path}/innerkits/data/",
    "${udmf_interfaces_path}/innerkits/common",
  ]
}

group("udmf_data_ani") {
  deps = [
    ":unifiedDataChannel_abc_etc",
    ":unifieddatachannel_ani",
  ]
}

ohos_shared_library("unifieddatachannel_ani") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    oundary_sanitize = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "native/src/unifieddatachannel_ani.cpp" ]

  public_configs = [ ":ani_config" ]

  deps = [ "${udmf_interfaces_path}/innerkits:udmf_client" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:appkit_native",
    "ability_runtime:napi_common",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_ani",
    "runtime_core:ani",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "udmf"
  output_extension = "so"
}

generate_static_abc("unifiedDataChannel_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.data.unifiedDataChannel.ets" ]
  dst_file = "$target_out_dir/data_unifiedDataChannel.abc"
  out_puts = [ "$target_out_dir/data_unifiedDataChannel.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/data_unifiedDataChannel.abc"
}

ohos_prebuilt_etc("unifiedDataChannel_abc_etc") {
  source = "$target_out_dir/data_unifiedDataChannel.abc"
  module_install_dir = "framework"
  subsystem_name = "distributeddatamgr"
  part_name = "udmf"
  deps = [ ":unifiedDataChannel_abc" ]
}
