# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

config("udmf_client_config") {
  include_dirs = [
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_interfaces_path}/innerkits/data",

    "${udmf_framework_path}/common",
    "${udmf_framework_path}/manager",
    "${udmf_framework_path}/manager/store",
    "${udmf_framework_path}/manager/preprocess",
    "${udmf_framework_path}/manager/permission",
    "${udmf_framework_path}/manager/lifecycle",
    "${udmf_framework_path}/service",
    "${kv_store_path}/frameworks/common",
    "//third_party/libuv/include",
    "//third_party/node/src",
  ]
}

ohos_shared_library("udmf_client") {
  sources = [
    "${udmf_framework_path}/common/anonymous.cpp",
    "${udmf_framework_path}/common/tlv_util.cpp",
    "${udmf_framework_path}/common/udmf_types_util.cpp",
    "${udmf_framework_path}/innerkitsimpl/client/udmf_client.cpp",
    "${udmf_framework_path}/innerkitsimpl/common/unified_key.cpp",
    "${udmf_framework_path}/innerkitsimpl/common/unified_meta.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/application_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/audio.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/folder.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/html.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/image.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/link.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/plain_text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_appitem.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_form.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_pixelmap.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_data.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/video.cpp",
    "${udmf_framework_path}/manager/data_manager.cpp",
    "${udmf_framework_path}/manager/lifecycle/clean_after_get.cpp",
    "${udmf_framework_path}/manager/lifecycle/clean_on_startup.cpp",
    "${udmf_framework_path}/manager/lifecycle/clean_on_timeout.cpp",
    "${udmf_framework_path}/manager/lifecycle/lifecycle_manager.cpp",
    "${udmf_framework_path}/manager/lifecycle/lifecycle_policy.cpp",
    "${udmf_framework_path}/manager/permission/checker_manager.cpp",
    "${udmf_framework_path}/manager/permission/data_checker.cpp",
    "${udmf_framework_path}/manager/permission/uri_permission_manager.cpp",
    "${udmf_framework_path}/manager/preprocess/preprocess_utils.cpp",
    "${udmf_framework_path}/manager/store/runtime_store.cpp",
    "${udmf_framework_path}/manager/store/store_cache.cpp",
    "${udmf_framework_path}/service/udmf_service_client.cpp",
    "${udmf_framework_path}/service/udmf_service_proxy.cpp",
  ]

  public_configs = [ ":udmf_client_config" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:uri_permission_mgr",
    "access_token:libaccesstoken_sdk",
    "app_file_service:remote_file_share_native",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hitrace_native:libhitracechain",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "distributeddatamgr"

  part_name = "udmf"
}
